oauth-proxy/oauth2-ingress.yaml
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   annotations:
#     nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
#     nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
#   name: external-auth-oauth2
#   namespace: kube-system
# spec:
#   rules:
#   - host: __INGRESS_HOST__
#     http:
#       paths:
#       - backend:
#           serviceName: kubernetes-dashboard
#           servicePort: 80
#         path: /

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: dashboard.ironlab.dev
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - dashboard.ironlab.dev
    secretName: oauth2-tls
